--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,118 @@
 	<title>Paasbal</title>
 </head>
 <body>
-	<h1>Hello, Paasbal!</h1>
+<section id="hero">
+	<div id="hero-inner">
+		<div id="hero-logo">
+			<img
+					src="/static/img/logo.png"
+					alt="Paasbal 2020"
+			/>
+		</div>
+		<div id="hero-spacer"></div>
+		<div id="hero-right">
+			<h1 id="hidden-title">Paasbal 2020</h1>
+
+			<h2>12 april 2020</h2>
+			<h3>Sporthal De Wimpel</h3>
+			<h4>Dalstraat 28 <br> 2222 Wiekevorst</h4>
+		</div>
+	</div>
+	<div id="scroll-indicator">
+		<p>Meer info</p>
+		<div id="scroll-icon">
+			<span class="m_scroll_arrows scroll-arrow-1"></span>
+			<span class="m_scroll_arrows scroll-arrow-2"></span>
+			<span class="m_scroll_arrows scroll-arrow-3"></span>
+		</div>
+	</div>
+</section>
+
+<div id="fade-border"></div>
+<main>
+	<section id="locatie" data-aos="fade-up" data-aos-duration="1000">
+		<h2>Locatie</h2>
+		<address>
+			<p>
+				Sporthal De Wimpel<br />
+				Dalstraat 28 <br />
+				2222 Wiekevorst
+			</p>
+		</address>
+		<div class="google-maps">
+			<iframe
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.681725072136!2d4.785823116133596!3d51.114332179572365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c150e5e915fd39%3A0x97e7f0b0fa73ab04!2sPAASBAL!5e0!3m2!1sen!2sbe!4v1518127986351"
+					width="600"
+					height="450"
+					frameborder="0"
+					style="border:0"
+					allowfullscreen
+			></iframe>
+		</div>
+	</section>
+
+	<section id="inkom" data-aos="fade-up">
+		<h2>Inkom</h2>
+
+		<div class="row">
+			<div class="col col-4">Voorverkoop</div>
+			<div class="col">7 euro</div>
+		</div>
+
+		<div class="row">
+			<div class="col col-4">Kassa</div>
+			<div class="col">9 euro</div>
+		</div>
+
+		<p>Voorverkoopkaarten zijn te verkrijgen op volgende punten:</p>
+		<ul>
+			<li>Punt 1</li>
+			<li>Punt 2</li>
+		</ul>
+	</section>
+
+	<section id="lineup" data-aos="fade-up">
+		<h2>Line-up</h2>
+
+		<button type="button" class="collapsible">
+			<h3>Main stage</h3>
+			<span class="icon">+</span>
+		</button>
+		<div class="lineup-images content" id="lineup-main">
+		</div>
+
+		<button type="button" class="collapsible">
+			<h3>Feesttent</h3>
+			<span class="icon">+</span>
+		</button>
+		<div class="lineup-images content" id="lineup-feest">
+		</div>
+
+		<button type="button" class="collapsible">
+			<h3>Tight on Techno</h3>
+			<span class="icon">+</span>
+		</button>
+		<div class="lineup-images content" id="lineup-techno">
+		</div>
+	</section>
+
+	<section id="fuifbus" data-aos="fade-up">
+		<h2>Fuifbus</h2>
+		<p>Hier kan je binnenkort alle info over de fuifbussen vinden.</p>
+	</section>
+
+	<section id="contact" data-aos="fade-up">
+		<h2>Contact</h2>
+		<p>
+			Vragen of suggesties? Contacteer ons op
+			<a href="https://www.facebook.com/Paasbal">Facebook</a> of
+			<a href="mailto:info@paasbal.be">info@paasbal.be</a>!
+		</p>
+	</section>
+
+</main>
+<footer>
+	&copy; <span class="fill-year"></span> KLJ Wiekevorst
+</footer>
 </body>
 </html>
