fix webpack relative urls

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
 	<div id="hero-inner">
 		<div id="hero-logo">
 			<img
-					src="/static/img/logo.png"
+					src="static/img/logo.png"
 					alt="Paasbal 2020"
 			/>
 		</div>
