Fix iPhone layout

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,11 +3,13 @@
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
 
 	<title>Paasbal</title>
 </head>
 <body>
+<img src="../static/img/bg.jpg" alt="Paasbal background" id="bg" />
+
 <section id="hero">
 	<div id="hero-inner">
 		<div id="hero-logo">
@@ -16,7 +18,7 @@
 					alt="Paasbal 2020"
 			/>
 		</div>
-		<div id="hero-right">
+		<div id="hero-info">
 			<h1 id="hidden-title">Paasbal 2020</h1>
 
 			<h2>12 april 2020</h2>
@@ -35,6 +37,7 @@
 </section>
 
 <div id="fade-border"></div>
+
 <main>
 	<section id="locatie" data-aos="fade-up" data-aos-duration="1000">
 		<h2>Locatie</h2>
@@ -117,8 +120,10 @@
 	</section>
 
 </main>
+
 <footer>
 	&copy; <span class="fill-year"></span> KLJ Wiekevorst
 </footer>
+
 </body>
 </html>
