--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
 	<title>Paasbal</title>
 </head>
 <body>
-<img src="../static/img/bg.jpg" alt="Paasbal background" id="bg" />
+<img src="static/img/bg.jpg" alt="Paasbal background" id="bg" />
 
 <section id="hero">
 	<div id="hero-inner">
