Favicons, meta tags, content

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,9 +3,41 @@
 <head>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
+	<meta http-equiv="x-ua-compatible" content="ie=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
+	<meta
+		name="description"
+		content="Paasbal georganiseerd door KLJ Wiekevorst."
+	/>
+	<meta
+		name="keywords"
+		lang="nl"
+		content="wiekevorst fuif house techno feestmuziek sporthal paasbal bal feest party music muziek pasen paaszondag easter heist heist-op-den-berg antwerp antwerpen"
+	/>
+	<meta name="author" content="Kristof Buts" />
+	<meta
+			name="copyright"
+			lang="nl"
+			content="Copyright KLJ Wiekevorst 2020"
+	/>
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="apple-mobile-web-app-title" content="Paasbal">
+	<meta name="application-name" content="Paasbal">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
 
-	<title>Paasbal</title>
+	<meta property="og:title" content="Paasbal 2020">
+	<meta property="og:site_name" content="Paasbal">
+	<meta property="og:url" content="https://www.paasbal.be">
+	<meta property="og:description" content="PAASBAL 2020 - 12 april 2020 - Sporthal De Wimpel, Wiekevorst">
+	<meta property="og:type" content="website">
+	<meta property="og:image" content="https://www.paasbal.be/static/img/fb_cover.png">
+
+	<title>Paasbal 2020</title>
 </head>
 <body>
 <img src="static/img/bg.jpg" alt="Paasbal background" id="bg" />
@@ -50,7 +82,7 @@
 		</address>
 		<div class="google-maps">
 			<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.681725072136!2d4.785823116133596!3d51.114332179572365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c150e5e915fd39%3A0x97e7f0b0fa73ab04!2sPAASBAL!5e0!3m2!1sen!2sbe!4v1518127986351"
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2504.703690335409!2d4.786545051497872!3d51.113926947115985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c151ea222a7aad%3A0xf1d4f653418d4981!2sPaasbal!5e0!3m2!1sen!2sbe!4v1576784754638!5m2!1sen!2sbe"
 					width="600"
 					height="450"
 					frameborder="0"
@@ -73,11 +105,12 @@
 			<div class="col">9 euro</div>
 		</div>
 
-		<p>Voorverkoopkaarten zijn te verkrijgen op volgende punten:</p>
-		<ul>
-			<li>Punt 1</li>
-			<li>Punt 2</li>
-		</ul>
+		<div class="row">
+			<div class="col col-4">VIP</div>
+			<div class="col">25 euro</div>
+		</div>
+
+		<p>Voorverkoop- en VIP-tickets zijn binnenkort beschikbaar, meer informatie over verkrijgbaarheid volgt later. </p>
 	</section>
 
 	<section id="lineup" data-aos="fade-up">
@@ -107,14 +140,25 @@
 
 	<section id="fuifbus" data-aos="fade-up">
 		<h2>Fuifbus</h2>
-		<p>Hier kan je binnenkort alle info over de fuifbussen vinden.</p>
+		<p>Terug van weggeweest: de <strong>fuifbus</strong>! <br>
+		Dit jaar brengen we je opnieuw veilig van en naar Paasbal, en dat helemaal gratis!</p>
+		<p>De bediende haltes en het uurschema kan je hier binnenkort terugvinden.</p>
+	</section>
+
+	<section id="nice" data-aos="fade-up">
+		<h2>Nice!</h2>
+		<p>Gratis fiets- en autoparking aan de terreinen van het KLJ-lokaal.<br />
+			<small>Wij zijn niet verantwoordelijk voor gebeurlijke ongevallen of diefstallen</small>
+		</p>
+		<p>Lekkere hamburgers te verkrijgen</p>
+		<p>Vestiaire</p>
 	</section>
 
 	<section id="contact" data-aos="fade-up">
 		<h2>Contact</h2>
 		<p>
-			Vragen of suggesties? Contacteer ons op
-			<a href="https://www.facebook.com/Paasbal">Facebook</a> of
+			Vragen of suggesties? Stuur gericht een berichtje via
+			<a href="https://www.facebook.com/Paasbal">Facebook</a> of naar
 			<a href="mailto:info@paasbal.be">info@paasbal.be</a>!
 		</p>
 	</section>
